--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
          <!-- Cartões de notícia -->
         <article class="card">
-          <img src="noticia1.jpg" alt="Notícia 1" />
+          <img src="hospital.html" alt="Notícia 1" />
           <h3>Título da Notícia 1</h3>
           <p>Resumo da notícia com algumas informações importantes.</p>
         </article>
