--- a/index.html
+++ b/index.html
@@ -39,21 +39,28 @@
       <div class="grid-noticias">
 
          <!-- Cartões de notícia -->
-        <article class="card">
-          <img src="hospital.html" alt="Notícia 1" />
-          <h3>Título da Notícia 1</h3>
-          <p>Resumo da notícia com algumas informações importantes.</p>
-        </article>
-        <article class="card">
-          <img src="noticia2.jpg" alt="Notícia 2" />
-          <h3>Título da Notícia 2</h3>
-          <p>Resumo da notícia com algumas informações importantes.</p>
-        </article>
-        <article class="card">
-          <img src="noticia3.jpg" alt="Notícia 3" />
-          <h3>Título da Notícia 3</h3>
-          <p>Resumo da notícia com algumas informações importantes.</p>
-        </article>
+  <a href="hospital.html?hospital=saojose" class="card-link">
+    <article class="card">
+      <img src="noticia1.jpg" alt="Hospital São José" />
+      <h3>Hospital Municipal São José</h3>
+      <p>Unidade de atendimento com pronto socorro 24h e centro cirúrgico.</p>
+    </article>
+  </a>
+  <a href="hospital.html?hospital=clinicaesther" class="card-link">
+    <article class="card">
+      <img src="noticia2.jpg" alt="Clínica Esther" />
+      <h3>Clínica Esther</h3>
+      <p>Atendimento especializado em pediatria e exames laboratoriais.</p>
+    </article>
+  </a>
+  <a href="hospital.html?hospital=clinicaesther" class="card-link">
+    <article class="card">
+      <img src="noticia3.jpg" alt="Clínica Esther" />
+      <h3>Clínica Esther</h3>
+      <p>Atendimento especializado em pediatria e exames laboratoriais.</p>
+    </article>
+  </a>
+  
       </div>
     </section>
   </main>
