--- a/hospital.html
+++ b/hospital.html
@@ -8,9 +8,20 @@
 </head>
 <body>
 
-  <!-- Cabeçalho com título -->
-  <header>
-    <h1>Informações do Hospital</h1>
+<!-- Cabeçalho com logo e menu -->
+  <header class="topo">
+    <div class="container">
+      <img src="logo.png" alt="Logo Governo MA" class="logo" />
+      <nav class="menu">
+        <ul>
+          <li><a href="#">Início</a></li>
+          <li><a href="#">Institucional</a></li>
+          <li><a href="#">Serviços</a></li>
+          <li><a href="#">Notícias</a></li>
+          <li><a href="#">Transparência</a></li>
+        </ul>
+      </nav>
+    </div>
   </header>
 
   <!-- Bloco com informações e mapa lado a lado -->
@@ -33,10 +44,12 @@
 
   </div>
 
-  <!-- Rodapé -->
-  <footer>
-    &copy; 2025 Secretaria de Saúde do Maranhão
+   <!-- Rodapé com informações de contato -->
+  <footer class="rodape">
+    <div class="container">
+      <p>&copy; Grupo</p>
+      <p>Contato</p>
+    </div>
   </footer>
-
 </body>
 </html>
